fix: boolean type JsonProperty 추가
Change-Id: I5173173d0b3227188cf5f7bc4604d7ef78883bb2